@@ -2,7 +2,7 @@
 	  The Coccinella : Jabber application with Whiteboard
 	  ---------------------------------------------------
 
-		version 0.94.9, May, 2004
+		version 0.94.10, May, 2004
 
 		       by Mats Bengtsson
 
