@@ -61,6 +61,7 @@
 *Agent*Tree.highlightThickness:      0
 *Browse*Scrollbar.width:             12
 *Browse*Tree.highlightThickness:     0
+*Chat*Scrollbar.width:               12
 *Disco*Scrollbar.width:              12
 *Disco*Tree.highlightThickness:      0
 *GroupChat*Scrollbar.width:          12
