@@ -4,6 +4,12 @@ Whiteboard CHANGES
 
 Not to mention all bugfixes and rewrites.
 
+Coccinella-0.94.10 (04????): 	Short summary --
+
+        - STRINGPREP fixes in roster, browse, disco,...
+	- minor fixes for XMPP (ejabberd and jabberd2)
+
+
 Coccinella-0.94.9 (04????): 	Short summary --
 
         - prepared for using xml/svg for all whiteboard stuff
